# sabqcha

./: LICENSE  Readme.md  build.sh  docker-compose.yml
backend/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  grader.py  grader_response.md  pdf_extractor.py  pdf_extractor_ms.py  pyproject.toml
backend/api/: dependencies.py  exceptions.py  job_utils.py  main.py  prompts.py  utils.py
backend/api/controllers/: grade_controller.py  transcribe_controller.py
backend/api/dal/: id_map.py  job_db.py  leaderboard_db.py  lecture_db.py  mcq_db.py  past_paper_db.py  quiz_db.py  room_db.py  session_db.py  task_db.py  transcription_db.py  user_db.py
backend/api/models/: lecture_models.py  past_paper_models.py  quiz_model.py  room_models.py  task_models.py  transcription_models.py  user_models.py
backend/api/routes/: leaderboard_routes.py  lecture_routes.py  past_paper_routes.py  quiz_routes.py  room_routes.py  task_routes.py  transcribe_routes.py  user_routes.py
backend/db/: schema.sql
backend/db/migrations/: 20251006171045_init.sql  20251009084223_init.sql  20251011145552_move_score_to_room.sql  20251012080313_lecture_aggregate_table.sql  20251012083132_add_room_id_to_lecture_group.sql  20251012105540_replace_room_id_with_group_id_in_lecture_table.sql  20251012112211_drop_lecture_id_in_task_set.sql  20251012134309_new_task_attempt_table.sql  20251012161356_add_analysis_table.sql  20251015200630_create_quiz_and_solutions_tables.sql  20251016040045_add_user_id_in_task_set_attempt.sql  20251016055812_add_job_table.sql  (+7 more)
frontend/: .env.example  (+6 more)
(+31 files in other folders)
