[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.118.0",
    "firebase-admin>=7.1.0",
    "loguru>=0.7.3",
    "openai>=2.1.0",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
]
