[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "base58>=2.1.1",
    "fastapi[standard]>=0.118.0",
    "ffmpeg-python>=0.2.0",
    "firebase-admin>=7.1.0",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "openai>=2.1.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pikepdf>=9.11.0",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic>=2.11.10",
    "pymupdf>=1.26.5",
    "requests>=2.32.5",
    "ruff>=0.13.3",
    "yt-dlp>=2025.9.26",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]
lint.select = ["I"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
